--- a/CooperColor/CooperColor/Base.lproj/Main.storyboard
+++ b/CooperColor/CooperColor/Base.lproj/Main.storyboard
@@ -54,7 +54,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <connections>
-                                    <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ga8-9y-NLI"/>
+                                    <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FZN-7L-GJh"/>
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="a33-q5-jkw">
@@ -65,11 +65,11 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <connections>
-                        <outlet property="bottomBgColorLabel" destination="y6k-t6-LIv" id="FLl-dX-OaZ"/>
-                        <outlet property="cooperObjectImage" destination="a33-q5-jkw" id="yaH-BQ-qvF"/>
-                        <outlet property="cooperTombstoneLabel" destination="WUR-LG-zSM" id="zvR-dp-lZp"/>
-                        <outlet property="middleBgColorLabel" destination="iZ5-3q-reL" id="Jgz-Kt-ewi"/>
-                        <outlet property="topBgColorLabel" destination="emI-za-FLe" id="adJ-x5-ges"/>
+                        <outlet property="bottomBgColorLabel" destination="y6k-t6-LIv" id="3fq-et-DCD"/>
+                        <outlet property="cooperObjectImageView" destination="a33-q5-jkw" id="4Re-Gj-zyE"/>
+                        <outlet property="cooperTombstoneLabel" destination="WUR-LG-zSM" id="52Q-Dk-Ty8"/>
+                        <outlet property="middleBgColorLabel" destination="iZ5-3q-reL" id="8nO-NL-sZ8"/>
+                        <outlet property="topBgColorLabel" destination="emI-za-FLe" id="9fb-I5-uiB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
