--- a/CooperColor/CooperColor/Base.lproj/Main.storyboard
+++ b/CooperColor/CooperColor/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,63 +19,48 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="emI-za-FLe">
-                                <frame key="frameInset" minX="18" minY="20" width="343" height="213"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="ji3-p8-4Wx">
+                                <frame key="frameInset" minX="67" minY="183" width="190" height="51"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </stackView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="a33-q5-jkw"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tombstone Lorem Ipsum" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WUR-LG-zSM">
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iZ5-3q-reL">
-                                <frame key="frameInset" minX="16" minY="234" width="343" height="213"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.0026985793880000002" green="0.95037828189999995" blue="0.0041870916279999996" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y6k-t6-LIv">
-                                <frame key="frameInset" minX="16" minY="446" width="343" height="213"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.99835759400000001" green="0.035876276780000001" blue="0.097552220250000002" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Tombstone Lorem Ipsum" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WUR-LG-zSM">
-                                <frame key="frameInset" minX="118" minY="406" width="158" height="84"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0tu-6Z-eVs">
-                                <frame key="frameInset" minX="164" minY="608" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0tu-6Z-eVs">
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <size key="titleShadowOffset" width="3" height="3"/>
+                                <state key="normal" title="New Object"/>
                                 <connections>
                                     <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FZN-7L-GJh"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="a33-q5-jkw">
-                                <frame key="frameInset" minX="67" minY="183" width="240" height="226"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="a33-q5-jkw" secondAttribute="trailing" id="7Zh-T7-Y6Y"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="0tu-6Z-eVs" secondAttribute="bottom" constant="162" id="AOa-SO-sq5"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="0tu-6Z-eVs" secondAttribute="trailing" constant="149" id="OmL-Ec-7za"/>
+                            <constraint firstItem="WUR-LG-zSM" firstAttribute="top" secondItem="a33-q5-jkw" secondAttribute="bottom" constant="8" id="fJ0-eN-7N2"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="WUR-LG-zSM" secondAttribute="trailing" constant="77" id="gXF-GS-0aK"/>
+                            <constraint firstItem="a33-q5-jkw" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="hO8-XA-vxf"/>
+                            <constraint firstItem="0tu-6Z-eVs" firstAttribute="top" secondItem="WUR-LG-zSM" secondAttribute="bottom" id="j3M-uY-cS6"/>
+                            <constraint firstItem="0tu-6Z-eVs" firstAttribute="top" secondItem="WUR-LG-zSM" secondAttribute="bottom" id="rHH-5Y-Bnt"/>
+                            <constraint firstItem="0tu-6Z-eVs" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="148" id="soK-ig-r6P"/>
+                            <constraint firstItem="a33-q5-jkw" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="twb-JU-hfA"/>
+                            <constraint firstItem="WUR-LG-zSM" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="76" id="yK0-cH-K32"/>
+                        </constraints>
                     </view>
                     <connections>
-                        <outlet property="bottomBgColorLabel" destination="y6k-t6-LIv" id="3fq-et-DCD"/>
                         <outlet property="cooperObjectImageView" destination="a33-q5-jkw" id="4Re-Gj-zyE"/>
                         <outlet property="cooperTombstoneLabel" destination="WUR-LG-zSM" id="52Q-Dk-Ty8"/>
-                        <outlet property="middleBgColorLabel" destination="iZ5-3q-reL" id="8nO-NL-sZ8"/>
-                        <outlet property="topBgColorLabel" destination="emI-za-FLe" id="9fb-I5-uiB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136.80000000000001" y="136.28185907046478"/>
+            <point key="canvasLocation" x="135.19999999999999" y="135.38230884557723"/>
         </scene>
     </scenes>
 </document>
